# Python-Packaging

./: PACKAGING INFORMATION.md  README.md  setup.cfg
tests/: test_example.py
